# mypostmen

./: .gitignore  BUILD.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIChatPanel.tsx  AIConfigModal.tsx  CodeEditor.tsx  HistorySidebar.tsx  JsonTreeViewer.tsx  RequestEditor.tsx  ResponseViewer.tsx
src/lib/: ai-service.ts  context-engine.ts  curl-builder.ts  http-client.ts  stream-to-store.ts  tauri-env.ts  types.ts
src/stores/: ai-store.ts  history-store.ts  request-store.ts
